--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 					Objekten zu kollidieren.
 				</p>
 				<p id="descEng" style="display: none">
-					"Lucy" is an autonomous vehicle, which can navigate to a chosen destination
-					independently. In order to choose a target on a map, the designated area needs to be
+					"Lucy" is an autonomous vehicle, which can navigate to a chosen destination all
+					by itself. In order to choose a target on a map, the designated area needs to be
 					digitally mapped first. The mapping process happens simultaneously while traversing
 					rooms or buildings. This is done by means of a LiDAR (Light Detection and Ranging)
 					Sensor. The vehicle then moves to its destination autonomously, without crashing
